connection string added for new database

--- a/firstdmo/appsettings.json
+++ b/firstdmo/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Server=localhost;Port=5432;UserId=postgres;Password=root;Database=PersonMVC;"
+    "SqlConnection": "Server=localhost;Port=5432;UserId=postgres;Password=root;Database=PersonMVC;",
+    "CompanyConnection": "Server=localhost;Port=5432;UserId=postgres;Password=root;Database=CompanyMVC;"
   }
 }
