--- a/BulkyBooks/appsettings.json
+++ b/BulkyBooks/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresqlConnection": "Server=localhost;Port=5432;UserId=postgres;Password=root;Database=BulkyBooksMVC;"
+    "PostgresqlConnection": "Server=hansken.db.elephantsql.com;Port=5432;UserId=mkibjqjc;Password=iKxkY6hKFAem5XhTXv5K82LMemvl2emU;Database=mkibjqjc; Pooling=true;SSL mode=require;TrustServerCertificate=True;"
   }
 }
